# exoprotocol

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KERNEL_EVOLUTION_POLICY.md  LICENSE  README.md  SECURITY.md  codex.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  exo-governance.yml
docs/: agent-quickstart.md  architecture.md  cli-reference.md  governance-rules.md  mcp-tool-reference.md
docs/agents/: config-reference.md  error-reference.md  mcp-tool-reference.md  quickstart.md  session-lifecycle.md
docs/guides/: faq.md  quickstart.md  workflows.md
exo/: __init__.py  cli.py  mcp_server.py
exo/control/: __init__.py  syscalls.py
exo/integrations/: __init__.py  openai_agents.py
exo/kernel/: __init__.py  audit.py  engine.py  errors.py  governance.py  ledger.py  receipts.py  syscalls.py  tickets.py  types.py  utils.py  version.py
exo/orchestrator/: __init__.py  engine.py  models.py  session.py  worker.py
exo/scripts/: __init__.py  compile_constitution.py  default_check.py  default_dispatch.py  default_do.py  default_plan.py
exo/stdlib/: __init__.py  adapters.py  archive.py  ci_fix.py  coherence.py  compose.py  config_schema.py  conflicts.py  defaults.py  dispatch.py  distributed_leases.py  doctor.py  drift.py  engine.py  evolution.py  features.py  follow_up.py  gc.py  hooks.py  install.py  memory_leak.py  metrics.py  pr_check.py  recall.py  reconcile.py  reflect.py  requirements.py  scan.py  scratchpad.py  sidecar.py  suggest.py  timeline.py  tools.py  traces.py  triage.py  upgrade.py
tests/: conftest.py  test_adapter_generation.py  test_archive.py  test_branch_awareness.py  test_ci_fix.py  test_cli_encoding.py  test_coherence.py  test_compose.py  test_concurrent_sessions.py  test_conflicts.py  test_dispatch_scheduler.py  test_distributed_leases.py  test_distributed_worker_loop.py  test_doctor.py  test_drift.py  test_features.py  test_follow_up.py  test_gc.py  test_hooks.py  test_id_collision.py  test_install.py  test_intent_accountability.py  test_kernel_invariants.py  test_learnings.py  test_memory_leak.py  test_merge_detection.py  test_metrics.py  test_openai_agents.py  test_orchestrator_layer3.py  test_pr_audit.py  test_pr_check.py  test_privacy.py  test_reflect.py  test_requirements.py  test_scan.py  test_session_lifecycle.py  test_session_liveness.py  test_sidecar_worktree.py  test_suggest.py  test_ticket_archive.py  (+3 more)
