[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoprotocol"
version = "0.1.14"
description = "Repo-native governance kernel for ExoProtocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jhet Chan" }]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.2.0"
]
test = [
  "pytest>=8.0.0"
]

[project.urls]
Homepage = "https://exoprotocol.dev"
Repository = "https://github.com/jhetchan/exoprotocol"
Documentation = "https://exoprotocol.dev/how-it-works"

[project.scripts]
exo = "exo.cli:main"
exo-mcp = "exo.mcp_server:main"

[tool.setuptools]
packages = ["exo", "exo.control", "exo.kernel", "exo.orchestrator", "exo.scripts", "exo.stdlib"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
